--- a/kirc.1
+++ b/kirc.1
@@ -120,6 +120,22 @@ or
 .I <nick> 
 is specified, the 
 .I <message> 
+.TP
+.BI /dcc
+DCC SEND is only enabled if the -d flag is passed to kirc.
+You can send files via DCC SEND using the folowing command:
+/dcc <target nick> <path to file> <internal ip> <external ip> <port>
+If you are sending files to clients outside of your lan, you must
+make sure that the chosen port is open and forwarded to
+the sending machine's internal address.
+Thus is usually done from your router's settings.
+For example:
+/dcc dcc_client /home/user/upload/file.txt 192.168.1.100 12.34.56.78 10000
+This command would send the file located at /home/user/upload/file.txt to the nick
+dcc_client, assuming the sending machine's local ip is 192.168.1.100, and
+the sending machine's external ip is 12.34.56.78, and that the port 10000
+is open and forwarded to the sending machine's local address.
+
 will be sent to the default message channel)
 .SH AUTHOR
 Michael Czigler <michaelczigler at icloud dot com>
